# rhs-desktop-app

./: .claudeignore  .coverage  .gitignore  .gitignore.txt  CLAUDE.MD  CLAUDE.md  PROJECT_INSTRUCTIONS.md  README.md  RHS_Code_Structure_v2.md  RHS_Development_Timeline.md  TIMELINE_CHANGE_NOTICE.md  environment.yml  markers.csv  pyproject.toml  record_video.py  requirements-dev.txt  requirements.txt  run.bat  run.sh  run_live_tracking.py  setup.bat  setup.sh
arduino/: Right_Heart_Simulator_Arduino_new.ino  rhs_firmware.ino
docs/: PRD.md  TODO.md  backup_slides_math_and_algorithm.md  calibration_to_displacement_walkthrough.md  metric_displacement_mathematics.md  solenoid_protocol.md
plots/: compare_trials.py  visualize_pressure_diff.py
prototypes/: INSTRUCTIONS.md  requirements_serial.txt  serialReaderV4.py  serial_reader.py
src/: main.py
tests/: __init__.py  conftest.py  mock_arduino.py  mock_camera.py  mock_data.csv  synthetic_valve.py  test_analyze_annotations.py  test_annotations_io.py  test_basler_recording.py  test_camera_tracking.py  test_control_bar.py  test_data_recorder.py  test_dot_refinement.py  test_dot_tracker.py  test_dot_tracker_manual.py  test_manual_dot_selection.py  test_playback_render.py  test_review_dialog.py  test_run_logger.py  test_serial_reader.py  test_synthetic_valve.py  test_tracking.py  test_ui_interactions.py
tools/: _annotations.py  _flow_params.py  _tracks.py  analyze_annotations.py  analyze_metric.py  analyze_pressure_vs_tracks.py  analyze_tracks.py  annotate_point.py  annotate_stereo_point.py  calibrate_valve.py  triangulate.py  (+14 more)
(+63 files in other folders)
